--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -11,10 +11,10 @@
             <p th:text="${user.getSurname()}"/>
             <p th:text="${user.getEmail()}"/>
         </div>
-        <a th:href="@{/users/{id}/edit(id = ${user.getId()})}">Edit</a>
-        <form th:method="DELETE" th:action="@{/users/{id}(id = ${user.getId()})}">
+        <a th:href="@{/admin/{id}/edit(id = ${user.getId()})}">Edit</a>
+        <form th:method="DELETE" th:action="@{/templates/user/{id}(id = ${user.getId()})}">
             <input type="submit" value="Delete">
         </form>
-    <a th:href="@{/users}">Go back</a>
+    <a th:href="@{/admin}">Go back</a>
     </body>
 </html>
