--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -6,7 +6,7 @@
     <title>Edit User</title>
 </head>
     <body>
-        <form th:method="PATCH" th:action="@{/users/{id}(id = ${user.getId()})}" th:object="${user}">
+        <form th:method="PATCH" th:action="@{/user/edit}" th:object="${user}">
             <label for="name">First name:</label>
             <input type="text" th:field="*{name}" id="name"/>
             <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">ERROR</div>
