--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -78,7 +78,7 @@
                                     </div>
                                 </div>
                                 <div class="tab-pane fade bg-white" id="newUser">
-                                    <div th:replace="fragments/addNewUser :: addNewUser"></div>
+                                    <div th:replace="fragments/new :: addNewUser"></div>
                                 </div>
                             </div>
                         </div>
